--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,13 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+firebase.js 
+firebase.json 
+firestore.indexes.json 
+firestore.rules 
+storage.rules
+.firebaserc
+.firebase
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
